legacy/salesforce/force-app/main/default/objects/Contact/fields/AI_Summary__c.field-meta.xml
<CustomField>
    <fullName>AI_Summary__c</fullName>
    <description>Running summary written by Concierge / Scheduler / Follow-Up.</description>
    <inlineHelpText>Updated by the Agent Service; not edited in chat.</inlineHelpText>
    <label>AI Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>