legacy/salesforce/force-app/main/default/objects/Contact/fields/Lead_Status__c.field-meta.xml
<CustomField>
    <fullName>Lead_Status__c</fullName>
    <description>Agent-service coordinator routing. Default Qualifying → Concierge.</description>
    <inlineHelpText>Used by the Agent Service coordinator to pick Concierge, Scheduler, or Follow-Up.</inlineHelpText>
    <label>Lead Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Qualifying</fullName>
                <default>true</default>
                <label>Qualifying</label>
            </value>
            <value>
                <fullName>Ready_to_Book</fullName>
                <label>Ready to Book</label>
            </value>
            <value>
                <fullName>Nurture</fullName>
            </value>
            <value>
                <fullName>Booked</fullName>
            </value>
            <value>
                <fullName>Handoff</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>