legacy/salesforce/force-app/main/default/objects/Contact/fields/Lead_Temperature__c.field-meta.xml
<CustomField>
    <fullName>Lead_Temperature__c</fullName>
    <description>Hot / Warm / Cold signal from the conversational agents.</description>
    <inlineHelpText>Set by the Agent Service from conversation signals.</inlineHelpText>
    <label>Lead Temperature</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hot</fullName>
            </value>
            <value>
                <fullName>Warm</fullName>
            </value>
            <value>
                <fullName>Cold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>