legacy/salesforce/force-app/main/default/objects/Contact/fields/Opted_Out__c.field-meta.xml
<CustomField>
    <fullName>Opted_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Compliance kill-switch. When true, Agent Service stops outbound conversation.</description>
    <inlineHelpText>If checked, the Agent Service will not reply.</inlineHelpText>
    <label>Opted Out</label>
    <type>Checkbox</type>
</CustomField>