legacy/salesforce/force-app/main/default/objects/Contact/fields/Qualification_Score__c.field-meta.xml
<CustomField>
    <fullName>Qualification_Score__c</fullName>
    <description>Agent qualification score from 0 to 100.</description>
    <inlineHelpText>0–100 score set by the Agent Service.</inlineHelpText>
    <label>Qualification Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>